Bug Fix: Profile picture religned to less visible background

--- a/src/routes/aboutme/aboutme.css
+++ b/src/routes/aboutme/aboutme.css
@@ -14,5 +14,5 @@
 #profile-picture{
     position: absolute;
     top: 10px;
-    left: calc(50% - calc(108/2)px)
+    left: calc(50% - 90px) /* 50% minus half the div width */
 }
